lox-tests/tests/number/decimal_point_at_eof.stderr
ERROR: Expected property name after '.'
 --> 2:1
  |
2 | 123.
  | ^---
3 | 
  | ^
